--- a/src/app/events/events-list-component.html
+++ b/src/app/events/events-list-component.html
@@ -1,14 +1,6 @@
 <div>
         <h1>Coming events page...</h1>
         <hr>
-        <div class="well hoverwell thumbnail">
-            <h2>{{event.name}}</h2>
-            <div>Date: {{event.date}}</div>
-            <div>Time: {{event.time}}</div>
-            <div>Price: ${{event.price}}</div>
-            <div>
-                <span>Location: {{event.location.address}}</span>
-                <span>Location: {{event.location.city}}, {{event.location.country}}</span>
-            </div>
-        </div>
+        <!--[xyz] ='obj' => this component has xyz input parameter and we are passing obj to it-->
+        <event-thumbnail [event]="eventObject"></event-thumbnail>
     </div>
