--- a/src/app/events/event-thumbnail-component.html
+++ b/src/app/events/event-thumbnail-component.html
@@ -7,4 +7,5 @@
             <span>Location: {{event.location.address}}</span>
             <span>Location: {{event.location.city}}, {{event.location.country}}</span>
         </div>
+        <button class='btn btn-primary' (click)="handleClick()">Register</button>
     </div>
