Using template variable to display child component properties

--- a/src/app/events/events-list-component.html
+++ b/src/app/events/events-list-component.html
@@ -10,4 +10,5 @@
         <div>
             <button class='btn btn-primary' (click)="thumbnail.logRefVar('hello')">Console Me</button>
         </div>
+        <h3>{{thumbnail.someProperty}}</h3>
     </div>
