Using ngStyle and ngClass for styling templates

--- a/src/app/events/event-thumbnail-component.html
+++ b/src/app/events/event-thumbnail-component.html
@@ -1,13 +1,15 @@
 <div class="well hoverwell thumbnail">
     <h2>{{eventInput.name}}</h2>
     <div>Date: {{eventInput.date}}</div>
-    <div *ngIf="eventInput.time" [ngSwitch]="eventInput?.time">Time: {{eventInput.time}}
-        (<span *ngSwitchCase="'8:00am'">Early Start</span>
-        <span *ngSwitchCase="'10:00am'">Late Start</span>
+    <div [ngClass]="getEventTimeClass()"
+        *ngIf="eventInput.time" [ngSwitch]="eventInput.time">
+        Time: {{eventInput.time}}
+        (<span *ngSwitchCase="'8:00 am'">Early Start</span>
+        <span *ngSwitchCase="'10:00 am'">Late Start</span>
         <span *ngSwitchDefault>Normal Start</span>
         )
     </div>
-    <div>Price: ${{eventInput.price}}</div>
+    <div [style.color]="eventInput.price &lt; 500 ? '#003300' : '#000033'">Price: ${{eventInput.price}}</div>
     <div *ngIf="eventInput.location">
         <span>Location: {{eventInput.location?.address}}</span>
         <span class="pad-left"> {{eventInput.location?.city}}, {{eventInput.location?.country}}</span>
