Use guarding on routes
Add logic to navigate from code when cancel is pressed
Add error page 404 in the component
Add canActivate to block user from navigating to non-existing event
Add confirmation dialog if user exits without save using canDeactivate

Learn Routers

--- a/src/app/events/event-thumbnail.component.html
+++ b/src/app/events/event-thumbnail.component.html
@@ -1,4 +1,4 @@
-<div class="well hoverwell thumbnail">
+<div [routerLink]="['/events', eventInput.id]" class="well hoverwell thumbnail">
     <h2>{{eventInput.name}}</h2>
     <div>Date: {{eventInput.date}}</div>
     <div [ngClass]="getEventTimeClass()"
