--- a/src/app/events/create-event.component.html
+++ b/src/app/events/create-event.component.html
@@ -2,5 +2,5 @@
 <hr>
 <div>
     <button type="submit" class="btn btn-primary">Save</button>
-    <button type="button" [disabled]="newEventForm.invalid" class="btn btn-default" (click)="cancel()">Cancel</button>
+    <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
 </div>
