--- a/src/app/events/events-list.component.html
+++ b/src/app/events/events-list.component.html
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="col-md-5" *ngFor="let eventItem of eventObjects" >
                 <event-thumbnail [eventInput]="eventItem" 
-                (eventClick)="handleEventClicked(eventItem)"></event-thumbnail>
+                (eventClick)="handleEventClicked($event)"></event-thumbnail>
             </div>
         </div>
     </div>
