--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -21,4 +21,19 @@
             </address>
           </div>
         </div>
+        <!--Passing data to the child element
+        Pass the data to the [sessions] property of the <session-list> component
+        -->
+        <div class="row">
+          <div class="col-md-2">
+            <h3 style="margin:0">Sessions</h3>
+          </div>
+          <div class="col-md-2">
+              <a (click)="addSession()">Add Session</a>
+            </div>
+        </div>
+        <session-list *ngIf="!addMode" [sessions]="eventObject?.sessions"></session-list>
+        <create-session *ngIf="addMode" (saveNewSession)="saveSessionFromChild($event)"
+        (cancelAddSession)="cancelAddSessionFromChild()"
+        ></create-session>
       </div>
